# hexometry

./: .gitignore  LICENSE  README.md  hexometry.py  pyproject.toml  tests.py  tests_requirements.txt
.github/workflows/: jekyll-gh-pages.yml  pypi-release.yml  run-pytest.yml  test.yml
src/hexometry/: __init__.py  coordinates.py  grids.py
src/tests/: geometry_test.py  grids_test.py
